syntax = "proto3";

package message;

option java_package = "nl.tudelft.cs4160.trustchain_android.message";
option java_outer_classname = "TrustChainBlockProto";

import "google/protobuf/timestamp.proto";

message TrustChainBlock {
    bytes transaction = 1;
    bytes public_key = 2;
    int32 sequence_number = 3;
    bytes link_public_key = 4;
    int32 link_sequence_number = 5;
    bytes previous_hash = 6;
    bytes signature = 7;
    google.protobuf.Timestamp insert_time = 8;
}